--- a/store/package.json
+++ b/store/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.2.0"
   }
 }
